[metadata]
name = oscan
version = file: VERSION
url = https://github.com/pyrustic/oscan
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = Scanner for hacking computer languages
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    scan
    scanner
    regex
    regular-expression
    text
    pyrustic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    oscan = oscan.__main__:main
